centered the board && fix board jump on end game

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-body {background-color: black; color:white}
+body {
+    background-color: black; 
+    color:white;
+    text-align: center;
+}
 
 .cell {width:40px; height:40px;text-align: center}
 .cell img {width:25px; height:auto}
@@ -7,6 +11,19 @@ body {background-color: black; color:white}
 .count{
     background-color: blue;
 }
+.game-stats{
+    height: 30px;
+    text-align: center;
+}
+.restart-game{
+    height: 20px;
+    border-radius: 10px;
+    background-color: lightblue;
+}
+table{
+    margin: 0 auto;
+}
+
 
 
 
